import db from "../../config/database";
import logger from "../../config/winston";
import { USER_PERMISSION_STATUS } from "../../utility/constants";

interface UserPermissionDb {
  id: number;
  user_email: string;
  workspace_id: string;
  last_event_id?: string;
  role: string;
  status: string;
  created_at?: Date;
  updated_at?: Date;
}

export interface UserPermissionDto {
  workspaceId: string;
  email: string;
  role: string;
  status: string;
  lastEventId?: string;
}

export const createPermissionDb = async (permission: UserPermissionDto) => {
  try {
    const permissionId = await db<UserPermissionDb>("user_permissions")
      .insert({
        workspace_id: permission.workspaceId,
        user_email: permission.email,
        last_event_id: permission.lastEventId,
        role: permission.role,
        status: permission.status,
      })
      .returning<number>("id");
    return permissionId;
  } catch (error) {
    logger.error("Error creating permission:", error);
    return undefined;
  }
};

export const findPermissionsByEmailDb = async (email: string) => {
  try {
    const perms = await db<UserPermissionDb>("user_permissions")
      .select("workspace_id")
      .where({ user_email: email });
    return perms;
  } catch (error) {
    logger.error(`Error finding permissions for ${email}:`, error);
    return [];
  }
};

export const findUsersInWorkspaceDb = async (workspaceId: string) => {
  try {
    const users = await db("user_permissions")
      .leftJoin("users", "user_permissions.user_email", "=", "users.email")
      .where("user_permissions.workspace_id", "=", workspaceId)
      .andWhere("user_permissions.status", "=", USER_PERMISSION_STATUS.active)
      .select(
        "user_permissions.id",
        "user_permissions.user_email as email",
        "users.username as name",
        "user_permissions.workspace_id as workspaceId",
        "user_permissions.role",
      );
    return users;
  } catch (error) {
    logger.error(`Error finding permissions for ${workspaceId}:`, error);
    return [];
  }
};

export const findPermissionByIdDb = async (permissionId: string) => {
  try {
    const permission = await db<UserPermissionDb>("user_permissions")
      .select("*")
      .where("id", "=", permissionId)
      .first();
    return permission;
  } catch (error) {
    logger.error(`Error finding permission by ID ${permissionId}:`, error);
    return undefined;
  }
};

export const findPermissionsByWorkspaceIdDb = async (workspaceId: string) => {
  try {
    const permissionsDb = await db<UserPermissionDb>("user_permissions")
      .select("*")
      .where("workspace_id", "=", workspaceId);
    const permissionsDto = permissionsDb.map((permission) => ({
      workspaceId: permission.workspace_id,
      email: permission.user_email,
      role: permission.role,
      status: permission.status,
      lastEventId: permission.last_event_id,
    }));
    return permissionsDto;
  } catch (error) {
    logger.error(`Error finding emails for workspaceId ${workspaceId}:`, error);
    return [];
  }
};

export const removePermissionDb = async (permissionId: string) => {
  try {
    await db<UserPermissionDb>("user_permissions")
      .delete()
      .where("id", "=", permissionId);
  } catch (error) {
    logger.error(`Error deleting permission`, error);
    return [];
  }
};

export const removePermissionsForWorkspaceDb = async (workspaceId: string) => {
  try {
    await db<UserPermissionDb>("user_permissions")
      .delete()
      .where("workspace_id", "=", workspaceId);
  } catch (error) {
    logger.error(`Error deleting permissions`, error);
    return [];
  }
};

export const removePermissionsForWorkspaceAndEmailDb = async (
  workspaceId: string,
  email: string,
) => {
  try {
    await db<UserPermissionDb>("user_permissions")
      .delete()
      .where("workspace_id", "=", workspaceId)
      .andWhere("user_email", "=", email);
  } catch (error) {
    logger.error(`Error deleting permissions`, error);
    return [];
  }
};
